ljb.9.6 Signed-off-by: Lijiangboouba <1094838104@qq.com>

--- a/html/x-html/jrwmInfo.html
+++ b/html/x-html/jrwmInfo.html
@@ -1,6 +1,6 @@
 
-	<div class="h_emplyeecon focus">
-		<div class="lb">
+	<div class="h_emplyeecon">
+		<div >
 		    <div class="h_employein">				
 				<div class="h_employeincon one">
 					<div class="h_employeintop clearfix">
