--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
 		<!-- 导航 -->
 		<div class="h_nav left clearfix">
             <div class="h_nav_box left">
-            	<a href="#" class="h_select">BizConf云会议</a>
+            	<a href="html/t_html/meeting.html" class="h_select">BizConf云会议</a>
 	            <ul class="h_ul">
-	        		<li><a href="#" id="h_video">视频会议</a></li>
-	            	<li><a href="#">电话会议</a></li>
-	            	<li><a href="#">网络直播</a></li>
-	            	<li><a href="#">网络会议</a></li>
+	        		<li><a href="html/t_html/meeting.html" id="h_video">视频会议</a></li>
+	            	<li><a href="html/t_html/meeting.html">电话会议</a></li>
+	            	<li><a href="html/t_html/meeting.html">网络直播</a></li>
+	            	<li><a href="html/t_html/meeting.html">网络会议</a></li>
 	            </ul>
             </div>
             <div class="h_nav_box left">
-            	<a href="#" class="h_select">解决方案</a>
+            	<a href="html/t_html/solve.html" class="h_select">解决方案</a>
             	<ul class="h_ul">
-                	<li><a href="#">全球</a></li>
-                	<li><a href="#">硬件扩展</a></li>
-                	<li><a href="#">HR远程通讯</a></li>
-                	<li><a href="#">金融行业</a></li>
-                	<li><a href="#">零售行业</a></li>
-                	<li><a href="#">医疗</a></li>
+                	<li><a href="html/t_html/solve.html">全球</a></li>
+                	<li><a href="html/t_html/solve.html">硬件扩展</a></li>
+                	<li><a href="html/t_html/solve.html">HR远程通讯</a></li>
+                	<li><a href="html/t_html/solve.html">金融行业</a></li>
+                	<li><a href="html/t_html/solve.html">零售行业</a></li>
+                	<li><a href="html/t_html/solve.html">医疗</a></li>
                 </ul>        
             </div>
             <div class="h_nav_box left">
@@ -56,22 +56,22 @@
 	            </ul>
             </div>
             <div class="h_nav_box left">
-            	<a href="#" class="h_select">服务与支持</a>
+            	<a href="html/y_service&support/service&support.html" class="h_select">服务与支持</a>
             	<ul class="h_ul">
-                	<li><a href="#">通讯3.0咨询</a></li>
-                	<li><a href="#">售后服务标准</a></li>
-                	<li><a href="#">申请试用</a></li>
-                	<li><a href="#">下载中心</a></li>
-                	<li><a href="#">投诉与建议</a></li>
-                	<li><a href="#">科普知识</a></li>
+                	<li><a href="html/y_service&support/service&support.html">通讯3.0咨询</a></li>
+                	<li><a href="html/y_service&support/service&support.html">售后服务标准</a></li>
+                	<li><a href="html/y_service&support/service&support.html">申请试用</a></li>
+                	<li><a href="html/y_service&support/service&support.html">下载中心</a></li>
+                	<li><a href="html/y_service&support/service&support.html">投诉与建议</a></li>
+                	<li><a href="html/y_service&support/service&support.html">科普知识</a></li>
                 </ul>
             </div>
             <div class="h_nav_box left">
-            	<a href="#" class="h_select">新闻动态</a>
+            	<a href="html/y_newsEvents/news.html" class="h_select">新闻动态</a>
 	        	<ul class="h_ul">
-	            	<li><a href="#">媒体报道</a></li>
-	            	<li><a href="#">公司新闻</a></li>
-	            	<li><a href="#">BBC俱乐部</a></li>
+	            	<li><a href="html/y_newsEvents/news.html">媒体报道</a></li>
+	            	<li><a href="html/y_newsEvents/news.html">公司新闻</a></li>
+	            	<li><a href="html/y_newsEvents/news.html">BBC俱乐部</a></li>
 	            </ul>
             </div>
             <div class="h_nav_box left">
@@ -584,130 +584,130 @@
 <div class='footer'>
 	<div class='footerNav'>
 		<div>
-			<a href="">BizConf云会议</a>
+			<a href="html/t_html/meeting.html">BizConf云会议</a>
 			<ul>
 				<li>
-					<a href="">视频会议</a>
+					<a href="html/t_html/meeting.html">视频会议</a>
 				</li>
 				<li>
-					<a href="">电话会议</a>
+					<a href="html/t_html/meeting.html">电话会议</a>
 				</li>
 				<li>
-					<a href="">网络直播</a>
+					<a href="html/t_html/meeting.html">网络直播</a>
 				</li>
 				<li>
-					<a href="">网络会议</a>
+					<a href="html/t_html/meeting.html">网络会议</a>
 				</li>
 			</ul>
 		</div>
 		<div>
-			<a href="">解决方案</a>
+			<a href="html/t_html/solve.html">解决方案</a>
 			<ul>
 				<li>
-					<a href="">全球</a>
+					<a href="html/t_html/solve.html">全球</a>
 				</li>
 				<li>
-					<a href="">硬件扩展</a>
+					<a href="html/t_html/solve.html">硬件扩展</a>
 				</li>
 				<li>
-					<a href="">HR远程通讯</a>
+					<a href="html/t_html/solve.html">HR远程通讯</a>
 				</li>
 				<li>
-					<a href="">金融行业</a>
+					<a href="html/t_html/solve.html">金融行业</a>
 				</li>
 				<li>
-					<a href="">零售行业</a>
+					<a href="html/t_html/solve.html">零售行业</a>
 				</li>
 				<li>
-					<a href="">医疗</a>
+					<a href="html/t_html/solve.html">医疗</a>
 				</li>
 			</ul>
 		</div>
 		<div>
-			<a href="">成功案例</a>
+			<a href="html/b_html/works.html">成功案例</a>
 			<ul>
 				<li>
-					<a href="">全部案例</a>
+					<a href="html/b_html/works.html">全部案例</a>
 				</li>
 				<li>
-					<a href="">视频会议</a>
+					<a href="html/b_html/works.html">视频会议</a>
 				</li>
 				<li>
-					<a href="">电话会议</a>
+					<a href="html/b_html/works.html">电话会议</a>
 				</li>
 				<li>
-					<a href="">网络直播</a>
+					<a href="html/b_html/works.html">网络直播</a>
 				</li>
 				<li>
-					<a href="">网络会议</a>
+					<a href="html/b_html/works.html">网络会议</a>
 				</li>
 			</ul>
 		</div>		
 		<div>
-			<a href="">服务与支持</a>
+			<a href="html/y_service&support/service&support.html">服务与支持</a>
 			<ul>
 				<li>
-					<a href="">通讯3.0资讯</a>
+					<a href="html/y_service&support/service&support.html">通讯3.0资讯</a>
 				</li>
 				<li>
-					<a href="">售后服务标准</a>
+					<a href="html/y_service&support/service&support.html">售后服务标准</a>
 				</li>
 				<li>
-					<a href="">申请使用</a>
+					<a href="html/y_service&support/service&support.html">申请使用</a>
 				</li>
 				<li>
-					<a href="">下载中心</a>
+					<a href="html/y_service&support/service&support.html">下载中心</a>
 				</li>
 				<li>
-					<a href="">投诉与建议</a>
+					<a href="html/y_service&support/service&support.html">投诉与建议</a>
 				</li>
 				<li>
-					<a href="">科普知识</a>
+					<a href="html/y_service&support/service&support.html">科普知识</a>
 				</li>
 			</ul>
 		</div>			
 		<div>
-			<a href="">新闻动态</a>
+			<a href="html/y_newsEvents/news.html">新闻动态</a>
 			<ul>
 				<li>
-					<a href="">媒体报道</a>
+					<a href="html/y_newsEvents/news.html">媒体报道</a>
 				</li>
 				<li>
-					<a href="">公司新闻</a>
+					<a href="html/y_newsEvents/news.html">公司新闻</a>
 				</li>
 				<li>
-					<a href="">BBC俱乐部</a>
+					<a href="html/y_newsEvents/news.html">BBC俱乐部</a>
 				</li>
 			</ul>
 		</div>			
 		<div>
-			<a href="">关于我们</a>
+			<a href="html/x-html/About.html">关于我们</a>
 			<ul>
 				<li>
-					<a href="">总裁寄语</a>
+					<a href="html/x-html/About.html">总裁寄语</a>
 				</li>
 				<li>
-					<a href="">企业介绍</a>
+					<a href="html/x-html/About.html">企业介绍</a>
 				</li>
 				<li>
-					<a href="">行业地位</a>
+					<a href="html/x-html/About.html">行业地位</a>
 				</li>
 				<li>
-					<a href="">企业荣耀</a>
+					<a href="html/x-html/About.html">企业荣耀</a>
 				</li>
 				<li>
-					<a href="">企业风采</a>
+					<a href="html/x-html/About.html">企业风采</a>
 				</li>
 				<li>
-					<a href="">加入我们</a>
+					<a href="html/x-html/About.html">加入我们</a>
 				</li>
 				<li>
-					<a href="">联系我们</a>
+					<a href="html/x-html/About.html">联系我们</a>
 				</li>
 			</ul>
 		</div>
 		<div class='Last'>
-			<a href="">绿色办公室</a>
+			<a href="html/b_html/office_b.html">绿色办公室</a>
 			<p>400-062-1818
 				<i>©2006-2018 All Right Reserved</i>
 			</p>
