--- a/html/y_newsEvents/news.html
+++ b/html/y_newsEvents/news.html
@@ -11,8 +11,8 @@
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css"/>
 
 	<!-- 公共部分css -->
-	<!-- <link href="../../css/pc_common.css" type="text/css" rel="stylesheet" media="screen and (min-width:769px)">
-	<link href="../../css/phone_common.css" type="text/css" rel="stylesheet" media="screen and (max-width:768px)"> -->
+	<link href="../../css/pc_common.css" type="text/css" rel="stylesheet" media="screen and (min-width:769px)">
+	<link href="../../css/phone_common.css" type="text/css" rel="stylesheet" media="screen and (max-width:768px)">
 	<!-- 个人部分样式 -->
 	<link href="../../css/yq_Css/pc.css" type="text/css" rel="stylesheet" media="screen and (min-width:769px)">
 	<link href="../../css/yq_Css/phone.css" type="text/css" rel="stylesheet" media="screen and (max-width:769px)">
@@ -22,6 +22,107 @@
 	<script src="../../js/angular.min.js"></script>
 	<script src="../../js/angular-ui-router.js"></script>
 </head>
+<!-- header头部 -->
+<div class="h_header">
+	<div class="h_box clearfix">
+		<div class="h_img left">
+			<a href="../../index.html"><img src="../../images/logo.png" alt="会畅通讯" class="h_meeting"></a>
+		</div>
+		<!-- 导航 -->
+		<div class="h_nav left clearfix">
+            <div class="h_nav_box left">
+            	<a href="../t_html/meeting.html" class="h_select">BizConf云会议</a>
+	             <ul class="h_ul">
+                    <li><a href="../t_html/meeting.html" id="h_video">视频会议</a></li>
+                    <li><a href="../t_html/meeting.html">电话会议</a></li>
+                    <li><a href="../t_html/meeting.html">网络直播</a></li>
+                    <li><a href="../t_html/meeting.html">网络会议</a></li>
+                </ul>
+            </div>
+            <div class="h_nav_box left">
+            	<a href="../t_html/solve.html" class="h_select">解决方案</a>
+            	<ul class="h_ul">
+                	<li><a href="../t_html/solve.html">全球</a></li>
+                	<li><a href="../t_html/solve.html">硬件扩展</a></li>
+                	<li><a href="../t_html/solve.html">HR远程通讯</a></li>
+                	<li><a href="../t_html/solve.html">金融行业</a></li>
+                	<li><a href="../t_html/solve.html">零售行业</a></li>
+                	<li><a href="../t_html/solve.html">医疗</a></li>
+                </ul>        
+            </div>
+            <div class="h_nav_box left">
+            	<a href="../b_html/works.html" class="h_select">成功案例</a>
+	        	<ul class="h_ul">
+	            	<li><a href="../b_html/works.html">全部案例</a></li>
+	            	<li><a href="../b_html/works.html" id="h_video">视频会议</a></li>
+	            	<li><a href="../b_html/works.html">电话会议</a></li>
+	            	<li><a href="../b_html/works.html">网络直播</a></li>
+	            	<li><a href="../b_html/works.html">网络会议</a></li>
+	            </ul>
+            </div>
+            <div class="h_nav_box left">
+            	<a href="../y_service&support/service&support.html" class="h_select">服务与支持</a>
+            	<ul class="h_ul">
+                	<li><a href="../y_service&support/service&support.html">通讯3.0咨询</a></li>
+                	<li><a href="../y_service&support/service&support.html">售后服务标准</a></li>
+                	<li><a href="../y_service&support/service&support.html">申请试用</a></li>
+                	<li><a href="../y_service&support/service&support.html">下载中心</a></li>
+                	<li><a href="../y_service&support/service&support.html">投诉与建议</a></li>
+                	<li><a href="../y_service&support/service&support.html">科普知识</a></li>
+                </ul>
+            </div>
+            <div class="h_nav_box left">
+            	<a href="news.html" class="h_select">新闻动态</a>
+	        	<ul class="h_ul">
+	            	<li><a ui-sref="Medio">媒体报道</a></li>
+	            	<li><a ui-sref='New'>公司新闻</a></li>
+	            	<li><a ui-sref="BBC">BBC俱乐部</a></li>
+	            </ul>
+            </div>
+            <div class="h_nav_box left">
+            	<a href="../x-html/About.html" class="h_select">关于我们</a>
+	        	<ul class="h_ul">
+	            	<li><a href="../x-html/About.html">总裁寄语</a></li>
+	            	<li><a href="../x-html/About.html">企业介绍</a></li>
+	            	<li><a href="../x-html/About.html">行业地位</a></li>
+	            	<li><a href="../x-html/About.html">企业荣耀</a></li>
+	            	<li><a href="../x-html/About.html">企业风采</a></li>
+	            	<li><a href="../x-html/About.html">加入我们</a></li>
+	            	<li><a href="../x-html/About.html">联系我们</a></li>
+	            </ul>
+            </div>
+            <div class="h_nav_box left">
+            	<a href="../x-html/tzzgx.html" class="h_select">投资者关系</a>
+	        	<ul class="h_ul">
+	            	<li><a href="../x-html/tzzgx.html">公司公告</a></li>
+	            	<li><a href="../x-html/tzzgx.html">章程制度</a></li>
+	            	<li><a href="../x-html/tzzgx.html">股票信息</a></li>
+	            </ul>
+            </div>
+            <div class="h_nav_box left">
+            	<a href="../b_html/office_b.html" class="h_select">绿色办公室</a>
+            	<ul class='h_ul'></ul>
+            </div>   
+            <!-- 翻译 -->
+            <div class="h_language left clear">
+	            <p class="left"><a href="#" id="bt1">CN</a></p>
+	            <P class="left"><a href="#" id="bt2"> EN</a></P>	
+	        </div>       
+     	</div>  
+     	<!-- 导航结束 	 -->
+        <div class="right h_tel">
+        	<a href="#" title="400-062-1818"><img src="../../images/tel.png" alt="会畅通讯咨询电话"></a>
+        </div>
+        <!-- 头部按钮 -->
+        <div class="h_pic right">
+        	<p></p>
+        	<p class="h_twop"></p>
+        	<p></p>
+        </div>
+        <!-- 头部按钮结束 -->
+	</div>
+</div>
+<!-- 头部结束 -->
 
 <!-- 新闻动态 -->
 <div class="NewsEvents" ng-app='NewsEvents'>
@@ -37,7 +138,217 @@
 	<!-- banner结束 -->
 	<div ui-view></div>	
 </div>
+<!-- 新闻动态结束 -->
 
+<!-- side column-nav    _stars -->
+<div class="column_b">
+	<div class="column_b_wx">
+		<div class="column_b_wx_con column_b_show"><p><a href="../../practice_b.html" style="color:#fff;">在线咨询</a></p></div>
+	</div>
+	<div class="column_b_phone">
+		<div class="column_b_phone_con column_b_show"><p>400-062-1818</p></div>
+	</div>
+	<div class="column_b_search">
+		<div class="column_b_search_con column_b_show"><p>在线试用</p></div>
+	</div>
+	<div class="column_b_top" id="column_b_top">
+		<div class="column_b_top_con .column_b_show"></div>
+	</div>
+	<div class="column_b_tel">
+		<a href="#" class="icon"><img src="../../images/icon.png"></a>
+		<p class="online"><a href="#">在线咨询</a></p>
+	</div>
+</div>
+<!-- side column-nav    _end-->
+<!--leave_t _starts-->
+    <div class="leave_t">
+        <div class="leave_t_top clearfix">
+            <span class="leave_t_title">请您留言</span>
+            <span id="falg_t"><i class="leave_t_close"></i></span>
+        </div>
+        <form>
+            <div class="leave_t_content clearfix">
+                <div class="leave_t_con">
+                    <textarea placeholder="请在此输入留言内容，我们会尽快与您联系。（必填）"  id='txt'></textarea>
+                </div>
+                <div class="leave_t_name">
+                    <span class="nodeName_t"></span><input type="text" id='name' placeholder="姓名">
+                </div>
+                <div class="leave_t_name">
+                    <span class="nodephone_t"></span><input type="text" placeholder="电话（必填）" id='phone'>
+                </div>
+                <div class="leave_t_name">
+                    <span class="nodemail_t"></span><input type="text" placeholder="邮箱" id='emial'>
+                </div>
+                <div class="leave_t_name">
+                    <span class="nodelocation"></span><input type="text" placeholder="地址" id='add'>
+                </div>
+                <div class="leave_t_send">
+                    发送
+                </div>
+            </div>
+        </form>
+    </div>
+<!--leave_t end  -->
+
+<!-- 尾部开始 -->
+<div class='footer'>
+    <div class='footerNav'>
+        <div>
+            <a href="../t_html/meeting.html">BizConf云会议</a>
+            <ul>
+                <li>
+                    <a href="../t_html/meeting.html">视频会议</a>
+                </li>
+                <li>
+                    <a href="../t_html/meeting.html">电话会议</a>
+                </li>
+                <li>
+                    <a href="../t_html/meeting.html">网络直播</a>
+                </li>
+                <li>
+                    <a href="../t_html/meeting.html">网络会议</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <a href="../t_html/solve.html">解决方案</a>
+            <ul>
+                <li>
+                    <a href="../t_html/solve.html">全球</a>
+                </li>
+                <li>
+                    <a href="../t_html/solve.html">硬件扩展</a>
+                </li>
+                <li>
+                    <a href="../t_html/solve.html">HR远程通讯</a>
+                </li>
+                <li>
+                    <a href="../t_html/solve.html">金融行业</a>
+                </li>
+                <li>
+                    <a href="../t_html/solve.html">零售行业</a>
+                </li>
+                <li>
+                    <a href="../t_html/solve.html">医疗</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <a href="../b_html/works.html">成功案例</a>
+            <ul>
+                <li>
+                    <a href="../b_html/works.html">全部案例</a>
+                </li>
+                <li>
+                    <a href="../b_html/works.html">视频会议</a>
+                </li>
+                <li>
+                    <a href="../b_html/works.html">电话会议</a>
+                </li>
+                <li>
+                    <a href="../b_html/works.html">网络直播</a>
+                </li>
+                <li>
+                    <a href="../b_html/works.html">网络会议</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <a href="../y_service&support/service&support.html">服务与支持</a>
+            <ul>
+                <li>
+                    <a href="../y_service&support/service&support.html">通讯3.0资讯</a>
+                </li>
+                <li>
+                    <a href="../y_service&support/service&support.html">售后服务标准</a>
+                </li>
+                <li>
+                    <a href="../y_service&support/service&support.html">申请使用</a>
+                </li>
+                <li>
+                    <a href="../y_service&support/service&support.html">下载中心</a>
+                </li>
+                <li>
+                    <a href="../y_service&support/service&support.html">投诉与建议</a>
+                </li>
+                <li>
+                    <a href="../y_service&support/service&support.html">科普知识</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <a href="news.html">新闻动态</a>
+            <ul>
+                <li>
+                    <a ui-sref="Medio">媒体报道</a>
+                </li>
+                <li>
+                    <a ui-sref='New'>公司新闻</a>
+                </li>
+                <li>
+                    <a ui-sref="BBC">BBC俱乐部</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <a href="../x-html/About.html">关于我们</a>
+            <ul>
+                <li>
+                    <a href="../x-html/About.html">总裁寄语</a>
+                </li>
+                <li>
+                    <a href="../x-html/About.html">企业介绍</a>
+                </li>
+                <li>
+                    <a href="../x-html/About.html">行业地位</a>
+                </li>
+                <li>
+                    <a href="../x-html/About.html">企业荣耀</a>
+                </li>
+                <li>
+                    <a href="../x-html/About.html">企业风采</a>
+                </li>
+                <li>
+                    <a href="../x-html/About.html">加入我们</a>
+                </li>
+                <li>
+                    <a href="../x-html/About.html">联系我们</a>
+                </li>
+            </ul>
+        </div>
+        <div class='Last'>
+            <a href="../b-html/office_b.html">绿色办公室</a>
+            <p>400-062-1818
+                <i>©2006-2018 All Right Reserved</i>
+            </p>
+            <div class='share'>
+                <a href="javascript:;" class='WX right'>
+                    <div class="WXbox">
+                        <img src="../../images/WXewm.png">
+                    </div>
+                </a>
+                <a href="javascript:;" class='WB right'></a>
+            </div>
+        </div>
+        <div class="mask">
+            <span class='FooterClose'><img src="../../images/WXclose.png"></span>
+            <h3>会畅通讯官方账号</h3>
+            <img src="../../images/WXerm2.jpg">
+            <p>打开微信，点击底部的“发现”，使用“扫一扫”即可关注会畅通讯</p>
+        </div>
+    </div>
+    <p class="footerBottom">
+        上海会畅通讯股份有限公司 版权所有 <a href="http://www.miitbeian.gov.cn">沪ICP备11034277号</a> Copyright © 2006-2018 All Right Reserved
+    </p>
+</div>
+<!-- 尾部结束 -->
+
+<!-- 公共的js -->
+<script type="text/javascript" src='../../js/scroll_b.js'></script>
+<script type="text/javascript" src='../../js/test_common.js'></script>
+<script type="text/javascript" src='../../js/js_b/leave_b.js'></script>
+<!-- 个人js -->
 <script type="text/javascript" src='../../js/yq_js/page.js'></script>
 </body>
 </html>
