--- a/html/y_service&support/service&support.html
+++ b/html/y_service&support/service&support.html
@@ -30,89 +30,90 @@
 <div class="h_header">
 	<div class="h_box clearfix">
 		<div class="h_img left">
-			<a href="#"><img src="../../images/logo.png" alt="会畅通讯" class="h_meeting"></a>
+			<a href="../../index.html"><img src="../../images/logo.png" alt="会畅通讯" class="h_meeting"></a>
 		</div>
-		<!-- 导航 -->
-		<div class="h_nav left clearfix">
+        <!-- 导航 -->
+        <div class="h_nav left clearfix">
             <div class="h_nav_box left">
-            	<a href="#" class="h_select">BizConf云会议</a>
-	            <ul class="h_ul">
-	        		<li><a href="#" id="h_video">视频会议</a></li>
-	            	<li><a href="#">电话会议</a></li>
-	            	<li><a href="#">网络直播</a></li>
-	            	<li><a href="#">网络会议</a></li>
-	            </ul>
-            </div>
-            <div class="h_nav_box left">
-            	<a href="#" class="h_select">解决方案</a>
-            	<ul class="h_ul">
-                	<li><a href="#">全球</a></li>
-                	<li><a href="#">硬件扩展</a></li>
-                	<li><a href="#">HR远程通讯</a></li>
-                	<li><a href="#">金融行业</a></li>
-                	<li><a href="#">零售行业</a></li>
-                	<li><a href="#">医疗</a></li>
-                </ul>        
-            </div>
-            <div class="h_nav_box left">
-            	<a href="#" class="h_select">成功案例</a>
-	        	<ul class="h_ul">
-	            	<li><a href="#">全部案例</a></li>
-	            	<li><a href="#" id="h_video">视频会议</a></li>
-	            	<li><a href="#">电话会议</a></li>
-	            	<li><a href="#">网络直播</a></li>
-	            	<li><a href="#">网络会议</a></li>
-	            </ul>
-            </div>
-            <div class="h_nav_box left">
-            	<a href="#" class="h_select">服务与支持</a>
-            	<ul class="h_ul">
-                	<li><a href="#">通讯3.0咨询</a></li>
-                	<li><a href="#">售后服务标准</a></li>
-                	<li><a href="#">申请试用</a></li>
-                	<li><a href="#">下载中心</a></li>
-                	<li><a href="#">投诉与建议</a></li>
-                	<li><a href="#">科普知识</a></li>
+                <a href="../t_html/meeting.html" class="h_select">BizConf云会议</a>
+                <ul class="h_ul">
+                    <li><a href="../t_html/meeting.html" id="h_video">视频会议</a></li>
+                    <li><a href="../t_html/meeting.html">电话会议</a></li>
+                    <li><a href="../t_html/meeting.html">网络直播</a></li>
+                    <li><a href="../t_html/meeting.html">网络会议</a></li>
                 </ul>
             </div>
             <div class="h_nav_box left">
-            	<a href="#" class="h_select">新闻动态</a>
-	        	<ul class="h_ul">
-	            	<li><a href="#">媒体报道</a></li>
-	            	<li><a href="#">公司新闻</a></li>
-	            	<li><a href="#">BBC俱乐部</a></li>
-	            </ul>
+                <a href="../t_html/solve.html" class="h_select">解决方案</a>
+                <ul class="h_ul">
+                    <li><a href="../t_html/solve.html">全球</a></li>
+                    <li><a href="../t_html/solve.html">硬件扩展</a></li>
+                    <li><a href="../t_html/solve.html">HR远程通讯</a></li>
+                    <li><a href="../t_html/solve.html">金融行业</a></li>
+                    <li><a href="../t_html/solve.html">零售行业</a></li>
+                    <li><a href="../t_html/solve.html">医疗</a></li>
+                </ul>
+            </div>
+           <div class="h_nav_box left">
+                <a href="../b_html/works.html" class="h_select">成功案例</a>
+                <ul class="h_ul">
+                   <li><a href="../b_html/works.html">全部案例</a></li>
+                    <li><a href="../b_html/works.html" id="h_video">视频会议</a></li>
+                    <li><a href="../b_html/works.html">电话会议</a></li>
+                    <li><a href="../b_html/works.html">网络直播</a></li>
+                    <li><a href="../b_html/works.html">网络会议</a></li>
+                </ul>
             </div>
             <div class="h_nav_box left">
-            	<a href="#" class="h_select">关于我们</a>
-	        	<ul class="h_ul">
-	            	<li><a href="#">总裁寄语</a></li>
-	            	<li><a href="#">企业介绍</a></li>
-	            	<li><a href="#">行业地位</a></li>
-	            	<li><a href="#">企业荣耀</a></li>
-	            	<li><a href="#">企业风采</a></li>
-	            	<li><a href="#">加入我们</a></li>
-	            	<li><a href="#">联系我们</a></li>
-	            </ul>
+                <a href="service&support.html" class="h_select">服务与支持</a>
+                <ul class="h_ul">
+                    <li><a ui-sref="FZIndex">通讯3.0咨询</a></li>
+                    <li><a ui-sref="AfterService">售后服务标准</a></li>
+                    <li><a ui-sref="Apply">申请试用</a></li>
+                    <li><a ui-sref="Know">下载中心</a></li>
+                    <li><a ui-sref="Suggeste">投诉与建议</a></li>
+                    <li><a ui-sref="Science">科普知识</a></li>
+                </ul>
             </div>
             <div class="h_nav_box left">
-            	<a href="#" class="h_select">投资者关系</a>
-	        	<ul class="h_ul">
-	            	<li><a href="#">公司公告</a></li>
-	            	<li><a href="#">章程制度</a></li>
-	            	<li><a href="#">股票信息</a></li>
-	            </ul>
+                <a href="../y_newsEvents/news.html" class="h_select">新闻动态</a>
+                <ul class="h_ul">
+                    <li><a href="../y_newsEvents/news.html">媒体报道</a></li>
+                    <li><a href="../y_newsEvents/news.html">公司新闻</a></li>
+                    <li><a href="../y_newsEvents/news.html">BBC俱乐部</a></li>
+                </ul>
             </div>
             <div class="h_nav_box left">
-            	<a href="#" class="h_select">绿色办公室</a>
-            </div>   
+                <a href="../x-html/About.html" class="h_select">关于我们</a>
+                <ul class="h_ul">
+                    <li><a href="../x-html/About.html">总裁寄语</a></li>
+                    <li><a href="../x-html/About.html">企业介绍</a></li>
+                    <li><a href="../x-html/About.html">行业地位</a></li>
+                    <li><a href="../x-html/About.html">企业荣耀</a></li>
+                    <li><a href="../x-html/About.html">企业风采</a></li>
+                    <li><a href="../x-html/About.html">加入我们</a></li>
+                    <li><a href="../x-html/About.html">联系我们</a></li>
+                </ul>
+            </div>
+            <div class="h_nav_box left">
+                <a href="../x-html/tzzgx.html" class="h_select">投资者关系</a>
+                <ul class="h_ul">
+                    <li><a href="../x-html/tzzgx.html">公司公告</a></li>
+                    <li><a href="../x-html/tzzgx.html">章程制度</a></li>
+                    <li><a href="../x-html/tzzgx.html">股票信息</a></li>
+                </ul>
+            </div>
+            <div class="h_nav_box left">
+               <a href="../b_html/office_b.html" class="h_select">绿色办公室</a>
+                <ul class='h_ul'></ul>
+            </div>
             <!-- 翻译 -->
             <div class="h_language left clear">
-	            <p class="left"><a href="#" id="bt1">CN</a></p>
-	            <P class="left"><a href="#" id="bt2"> EN</a></P>	
-	        </div>       
-     	</div>  
-     	<!-- 导航结束 	 -->
+                <p class="left"><a href="#" id="bt1">CN</a></p>
+                <P class="left"><a href="#" id="bt2"> EN</a></P>
+            </div>
+        </div>
+        <!-- 导航结束 	 -->
         <div class="right h_tel">
         	<a href="#" title="400-062-1818"><img src="../../images/tel.png" alt="会畅通讯咨询电话"></a>
         </div>
@@ -199,160 +200,160 @@
 
 <!-- 尾部开始 -->
 <div class='footer'>
-	<div class='footerNav'>
-		<div>
-			<a href="">BizConf云会议</a>
-			<ul>
-				<li>
-					<a href="">视频会议</a>
-				</li>
-				<li>
-					<a href="">电话会议</a>
-				</li>
-				<li>
-					<a href="">网络直播</a>
-				</li>
-				<li>
-					<a href="">网络会议</a>
-				</li>
-			</ul>
-		</div>
-		<div>
-			<a href="">解决方案</a>
-			<ul>
-				<li>
-					<a href="">全球</a>
-				</li>
-				<li>
-					<a href="">硬件扩展</a>
-				</li>
-				<li>
-					<a href="">HR远程通讯</a>
-				</li>
-				<li>
-					<a href="">金融行业</a>
-				</li>
-				<li>
-					<a href="">零售行业</a>
-				</li>
-				<li>
-					<a href="">医疗</a>
-				</li>
-			</ul>
-		</div>
-		<div>
-			<a href="">成功案例</a>
-			<ul>
-				<li>
-					<a href="">全部案例</a>
-				</li>
-				<li>
-					<a href="">视频会议</a>
-				</li>
-				<li>
-					<a href="">电话会议</a>
-				</li>
-				<li>
-					<a href="">网络直播</a>
-				</li>
-				<li>
-					<a href="">网络会议</a>
-				</li>
-			</ul>
-		</div>		
-		<div>
-			<a href="">服务与支持</a>
-			<ul>
-				<li>
-					<a href="">通讯3.0资讯</a>
-				</li>
-				<li>
-					<a href="">售后服务标准</a>
-				</li>
-				<li>
-					<a href="">申请使用</a>
-				</li>
-				<li>
-					<a href="">下载中心</a>
-				</li>
-				<li>
-					<a href="">投诉与建议</a>
-				</li>
-				<li>
-					<a href="">科普知识</a>
-				</li>
-			</ul>
-		</div>			
-		<div>
-			<a href="">新闻动态</a>
-			<ul>
-				<li>
-					<a href="">媒体报道</a>
-				</li>
-				<li>
-					<a href="">公司新闻</a>
-				</li>
-				<li>
-					<a href="">BBC俱乐部</a>
-				</li>
-			</ul>
-		</div>			
-		<div>
-			<a href="">关于我们</a>
-			<ul>
-				<li>
-					<a href="">总裁寄语</a>
-				</li>
-				<li>
-					<a href="">企业介绍</a>
-				</li>
-				<li>
-					<a href="">行业地位</a>
-				</li>
-				<li>
-					<a href="">企业荣耀</a>
-				</li>
-				<li>
-					<a href="">企业风采</a>
-				</li>
-				<li>
-					<a href="">加入我们</a>
-				</li>
-				<li>
-					<a href="">联系我们</a>
-				</li>
-			</ul>
-		</div>
-		<div class='Last'>
-			<a href="">绿色办公室</a>
-			<p>400-062-1818
-				<i>©2006-2018 All Right Reserved</i>
-			</p>
-			<div class='share'>
-				<a href="javascript:;" class='WX right'>
-					<div class="WXbox">
-						<img src="../../images/WXewm.png">
-					</div>
-				</a>
-				<a href="javascript:;" class='WB right'></a>				
-			</div>
-		</div>
-		<div class="mask">
-			<span class='FooterClose'><img src="../../images/WXclose.png"></span>
-			<h3>会畅通讯官方账号</h3>
-			<img src="../../images/WXerm2.jpg">
-			<p>打开微信，点击底部的“发现”，使用“扫一扫”即可关注会畅通讯</p>
-		</div>
-	</div>
-	<p class="footerBottom">
-		上海会畅通讯股份有限公司 版权所有 <a href="http://www.miitbeian.gov.cn">沪ICP备11034277号</a> Copyright © 2006-2018 All Right Reserved
-	</p>
+    <div class='footerNav'>
+        <div>
+            <a href="../t_html/meeting.html">BizConf云会议</a>
+            <ul>
+                <li>
+                    <a href="../t_html/meeting.html">视频会议</a>
+                </li>
+                <li>
+                    <a href="../t_html/meeting.html">电话会议</a>
+                </li>
+                <li>
+                    <a href="../t_html/meeting.html">网络直播</a>
+                </li>
+                <li>
+                    <a href="../t_html/meeting.html">网络会议</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <a href="../t_html/solve.html">解决方案</a>
+            <ul>
+                <li>
+                    <a href="../t_html/solve.html">全球</a>
+                </li>
+                <li>
+                    <a href="../t_html/solve.html">硬件扩展</a>
+                </li>
+                <li>
+                    <a href="../t_html/solve.html">HR远程通讯</a>
+                </li>
+                <li>
+                    <a href="../t_html/solve.html">金融行业</a>
+                </li>
+                <li>
+                    <a href="../t_html/solve.html">零售行业</a>
+                </li>
+                <li>
+                    <a href="../t_html/solve.html">医疗</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <a href="../b_html/works.html">成功案例</a>
+            <ul>
+                <li>
+                    <a href="../b_html/works.html">全部案例</a>
+                </li>
+                <li>
+                    <a href="../b_html/works.html">视频会议</a>
+                </li>
+                <li>
+                    <a href="../b_html/works.html">电话会议</a>
+                </li>
+                <li>
+                    <a href="../b_html/works.html">网络直播</a>
+                </li>
+                <li>
+                    <a href="../b_html/works.html">网络会议</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <a href="service&support.html">服务与支持</a>
+            <ul>
+                <li>
+                    <a ui-sref="FZIndex">通讯3.0资讯</a>
+                </li>
+                <li>
+                    <a ui-sref="AfterService">售后服务标准</a>
+                </li>
+                <li>
+                    <a ui-sref="Apply">申请使用</a>
+                </li>
+                <li>
+                    <a ui-sref="Know">下载中心</a>
+                </li>
+                <li>
+                    <a ui-sref="Suggeste">投诉与建议</a>
+                </li>
+                <li>
+                    <a ui-sref="Science">科普知识</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <a href="../y_newsEvents/news.html">新闻动态</a>
+            <ul>
+                <li>
+                    <a href="../y_newsEvents/news.html">媒体报道</a>
+                </li>
+                <li>
+                    <a href="../y_newsEvents/news.html">公司新闻</a>
+                </li>
+                <li>
+                    <a href="../y_newsEvents/news.html">BBC俱乐部</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <a href="../x-html/About.html">关于我们</a>
+            <ul>
+                <li>
+                    <a href="../x-html/About.html">总裁寄语</a>
+                </li>
+                <li>
+                    <a href="../x-html/About.html">企业介绍</a>
+                </li>
+                <li>
+                    <a href="../x-html/About.html">行业地位</a>
+                </li>
+                <li>
+                    <a href="../x-html/About.html">企业荣耀</a>
+                </li>
+                <li>
+                    <a href="../x-html/About.html">企业风采</a>
+                </li>
+                <li>
+                    <a href="../x-html/About.html">加入我们</a>
+                </li>
+                <li>
+                    <a href="../x-html/About.html">联系我们</a>
+                </li>
+            </ul>
+        </div>
+        <div class='Last'>
+            <a href="../b-html/office_b.html">绿色办公室</a>
+            <p>400-062-1818
+                <i>©2006-2018 All Right Reserved</i>
+            </p>
+            <div class='share'>
+                <a href="javascript:;" class='WX right'>
+                    <div class="WXbox">
+                        <img src="../../images/WXewm.png">
+                    </div>
+                </a>
+                <a href="javascript:;" class='WB right'></a>
+            </div>
+        </div>
+        <div class="mask">
+            <span class='FooterClose'><img src="../../images/WXclose.png"></span>
+            <h3>会畅通讯官方账号</h3>
+            <img src="../../images/WXerm2.jpg">
+            <p>打开微信，点击底部的“发现”，使用“扫一扫”即可关注会畅通讯</p>
+        </div>
+    </div>
+    <p class="footerBottom">
+        上海会畅通讯股份有限公司 版权所有 <a href="http://www.miitbeian.gov.cn">沪ICP备11034277号</a> Copyright © 2006-2018 All Right Reserved
+    </p>
 </div>
 <!-- 尾部结束 -->
 <!-- 公共的js -->
 <script type="text/javascript" src='../../js/scroll_b.js'></script>
+<script type="text/javascript" src='../../js/test_common.js'></script>
 <!-- 个人js -->
 <script type="text/javascript" src='../../js/yq_js/FZRoute.js'></script>
-<script type="text/javascript" src='../../js/test_common.js'></script>
 </body>
 </html>
