Signed-off-by: huxuexue <1711356156@qq.com>

--- a/html/x-html/About.html
+++ b/html/x-html/About.html
@@ -370,9 +370,8 @@
 
 
 
-<script type="text/javascript" src="../../js/test_common.js"></script>
+<script type="text/javascript" src="../../js/x-js/test_common.js"></script>
 <script type="text/javascript" src="../../js/scroll_b.js"></script>
-<script src="../../js/js_b/leave_b.js"></script>
 <script type="text/javascript" src="../../js/x-js/about.js"></script>
 <!-- Swiper JS -->
 </body>
