--- a/html/x-html/tzzgx.html
+++ b/html/x-html/tzzgx.html
@@ -17,7 +17,6 @@
 	<script type="text/javascript" src="../../js/mobile-util.js"></script>
 	<script type="text/javascript" src="../../js/angular.min.js"></script>
 	<script type="text/javascript" src="../../js/angular-ui-router.js"></script>
-	<script type="text/javascript" src="../../js/x-js/about.js"></script>
 	<script src="../../js/swiper.min.js"></script>
 </head>
 <body>
@@ -352,10 +351,10 @@
 
 
 
-<script type="text/javascript" src="../../js/test_common.js"></script>
+<script type="text/javascript" src="../../js/x-js/test_common.js"></script>
 <script type="text/javascript" src="../../js/scroll_b.js"></script>
-<script src="../../js/js_b/leave_b.js"></script>
-    <script type="text/javascript" src="../../js/x-js/about.js"></script>
+<script type="text/javascript" src="../../js/x-js/about.js"></script>
+
 <!-- Swiper JS -->
 </body>
 </html>
